# clap-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mcp_demo.py  release.sh  test_calculator_mcp.sh
.github/workflows/: ci.yml  lint.yml  release.yml
clap-mcp/: Cargo.toml
clap-mcp-derive/: Cargo.toml
clap-mcp-derive/src/: lib.rs
clap-mcp/src/: lib.rs  test_client.rs
examples/: calculator.rs  http_mcp_client.rs
