[workspace]
members = ["clap-mcp", "clap-mcp-derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dan Cline <dan@dancline.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rjected/clap-mcp"
description = "Turn any Clap CLI into an MCP server with a simple derive macro"
homepage = "https://github.com/rjected/clap-mcp"
keywords = ["cli", "mcp", "clap", "model-context-protocol", "derive"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk/" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
axum = "0.8"
tracing = "0.1"
